css/index_style.css
body {
    margin: 0em;
    font-family: sans-serif;
}
/* Header of sight */
#Header {
    background-color: antiquewhite;
    display: flex;
    padding: 0.1em;
    justify-content: center;
}
#Header a, #Header img{
    height: 2em;
    width: 15em;
    margin-top: 0.25em;
    margin-right: 17em;
}
#Header a:hover, #Header img:hover{
    height: 2em;
    width: 15em;
    margin-top: 0.25em;
    margin-right: 17em;
    filter: saturate(10);
    transition: 500ms;
}
h3 {
    font-size: 0.9em;
    transition: 500ms;
}
#title:hover {
    color: blueviolet;
    font-size: 0.8em;
    transition: 500ms;
}
/* Main Body of sight */
#main {
    background-color: aqua;
    padding: 1em 0em 2em 0em;
}
#Explanation {
    background-color: antiquewhite;
    margin: 0.64em 14em 0em 14em;
    border: 0.1em groove grey;
    text-align: center;
}
#options {
    margin: 0em 25em 0em 25em;
}
#options a{
    text-decoration: none;
    color: black;
}
#options a:hover{
    text-decoration: none;
    color: rgb(253, 13, 13);
}
ul li{
    background-color: bisque;
    list-style-type: none;
    margin-top: 1em;
    padding: 1em;
    border: 0.1em groove grey;
    text-decoration: none;
    text-align: center;
}
ul li:hover {
    transition: 500ms;
    box-shadow: inset 0 0 0.3em black;
}
#Explanation-2 {
    background-color: antiquewhite;
    margin: 1em 14em 0em 14em;
    border: 0.1em groove grey;
    text-align: center;
}
#Explanation-2 a{
    text-decoration: none;
    color: blue;
    font-style: oblique;
}
#Explanation-2 a:hover{
    text-decoration: none;
    color: rgb(0, 183, 255);
    font-style: oblique;
    transition: 500ms;
}
/* footer of sight */
footer {
    background-color: antiquewhite;
    text-align: right;
    padding: 0.01em;
    font-size: 1em;
    display: flex;
    justify-content: flex-end;
}
footer a{
    margin: 0.5em 1em 0em 0em;
    text-decoration: none;
    transition: 500ms;
}
footer a:hover{
    margin: 0.5em 2em 0em 0em;
    text-decoration: none;
    color:blueviolet;
    font-size: 1.2em;
    transition: 500ms;
    position: relative;
    bottom: 0.2em;
}
footer img  {
    height: 2.5%;
    width: 2.5%;
}
/* Media Queries */
 /* Tablet View */
 @media (min-width: 768px) and (max-height: px) {
    
}
/* Mobile View (iphone 11)*/
@media (min-width: 414px) {
    #main {
        background-color: rgb(0, 183, 255);
        width: 100%;
        display: flex;
        flex-direction: column;
        padding: 2em 0em 2em 0em;
    }
    #Header {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
    #Header a, #Header img{
        height: 2em;
        width: 15em;
        margin-top: 0.25em;
        margin-right: 17em;
    }
    h3 {
        font-size: 0.9em;
        transition: 500ms;
    }
    #title:hover {
        color: rgb(43, 226, 226);
        font-size: 0.8em;
        transition: 500ms;
    }
    #Explanation {
        margin: 0em 0em 0em 0em;
    }
    #options {
        margin: 0em 2em 0em 0em;
    }
    #Explanation-2 {
        margin: 0em 0em 0em 0em;
    }
    footer {
        background-color: antiquewhite;
        text-align: right;
        padding: 0.5em;
        font-size: 1.3em;
        display: flex;
        justify-content: flex-end;
    }
    footer img  {
        height: 15%;
        width: 15%;
    }
}
/* Large Monitor View */
@media (min-width: 1400px){
    #main {
        padding: 7em 0em 9.75em 0em;
    }
}

